--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -120,4 +120,13 @@
     <string name="fp_swipe_call_actions_disabled">Disabled</string>
     <string name="fp_swipe_call_actions_updown_answer_call">Swipe up or down to respond to incoming calls</string>
     <string name="fp_swipe_call_actions_up_answer_down_silence">Swipe up to respond to incoming calls, down to silence them</string>
+
+    <!-- OTA Updates-->
+    <string name="ota_title">ABC updates</string>
+    <string name="ota_summary">Download the latest version of ROM</string>
+	
+    <!-- Changelog -->
+    <string name="changelog_title">Changelog</string>
+    <string name="changelog_summary">Since the last update</string>
+    <string name="changelog_error">Unable to load changelog</string>
 </resources>
