--- a/res/values/custom_strings.xml
+++ b/res/values/custom_strings.xml
@@ -113,4 +113,6 @@
     <string name="show_cpu_info">Show CPU info</string>
     <!-- UI debug setting: show cpu usage summary [CHAR LIMIT=50] -->
     <string name="show_cpu_info_summary">Screen overlay showing current CPU info</string>
+    <!-- Running services -->
+    <string name="background_processes_settings_title">Background processes</string>
 </resources>
