--- a/res/drawable/ic_settings_abc.xml
+++ b/res/drawable/ic_settings_abc.xml
@@ -10,7 +10,7 @@
              android:translateX="-4.9485948"
              android:translateY="-4.2962997">
          <path
-        android:fillColor="#FFFFFFFF"
+        android:fillColor="#000000"
         android:strokeWidth="1"
         android:pathData="M1775 2755c177 -87 300 -237 346 -425 19 -78 16 -250 -6 -325 -48 -165 -165 -309 -310 -382 -70 -35 -142 -58 -237 -78 -27 -5 -28 -8 -28 -69l0 -63 40 -18c46 -21 97 -74 105 -108 3 -12 6 -46 7 -76 3 -53 4 -56 48 -82 25 -15 50 -27 55 -28 6 0 27 21 49 47 123 149 300 234 488 233 301 -1 562 -211 624 -502 16 -74 15 -229 -2 -274 -4 -11 -4 -17 0 -13 13 11 35 122 42 208 12 153 -30 325 -113 465 -60 101 -192 235 -291 294 -70 42 -247 111 -286 111 -21 0 -21 -3 13 124 23 89 28 223 10 322 -51 288 -244 529 -512 640 -106 44 -132 43 -42 -1z" />
 </vector>
