--- a/res/drawable/ic_settings_abc.xml
+++ b/res/drawable/ic_settings_abc.xml
@@ -5,12 +5,11 @@
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="?android:attr/colorAccent">
-
-     <group
-             android:translateX="-4.9485948"
-             android:translateY="-4.2962997">
-         <path
-        android:fillColor="#000000"
-        android:strokeWidth="1"
-        android:pathData="M1775 2755c177 -87 300 -237 346 -425 19 -78 16 -250 -6 -325 -48 -165 -165 -309 -310 -382 -70 -35 -142 -58 -237 -78 -27 -5 -28 -8 -28 -69l0 -63 40 -18c46 -21 97 -74 105 -108 3 -12 6 -46 7 -76 3 -53 4 -56 48 -82 25 -15 50 -27 55 -28 6 0 27 21 49 47 123 149 300 234 488 233 301 -1 562 -211 624 -502 16 -74 15 -229 -2 -274 -4 -11 -4 -17 0 -13 13 11 35 122 42 208 12 153 -30 325 -113 465 -60 101 -192 235 -291 294 -70 42 -247 111 -286 111 -21 0 -21 -3 13 124 23 89 28 223 10 322 -51 288 -244 529 -512 640 -106 44 -132 43 -42 -1z" />
+   
+        <path
+            android:fillColor="#FFFFFFFF"
+            android:strokeWidth="1"
+            android:pathData="M110 195 c-7 -8 -22 -15 -34 -15 -14 -1 -30 -16 -49 -44 -22 -36 -26 -49 -17 -70
+11 -30 3 -28 105 -31 84 -2 101 4 116 42 11 29 -1 60 -39 101 -32 35 -62 41 -82
+17z" />
 </vector>
